--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Oswald:wght@400;500;600;700&family=Poppins:wght@300;400;500;600;700&display=swap");
-
+:root {
+  --white-100: #e6e6e6;
+  --white-200: #cccccc;
+  --white-300: #b3b3b3;
+  --white-400: #999999;
+  --white-500: #808080;
+}
 * {
   padding: 0;
   margin: 0;
@@ -21,8 +27,13 @@ body {
   overflow-x: hidden;
 }
 body > .wrapper::after {
-  display: block;
-  content: "";
+  display: grid;
+  color: white;
+  letter-spacing: 0.3rem;
+  font-family: "Poppins";
+  font-variant: small-caps;
+  place-content: center;
+  content: "Made With ❤ by YeaGram";
   background-color: black;
   height: 5rem;
   width: 100vw;
@@ -37,7 +48,14 @@ body > .wrapper .container header > div {
   justify-content: space-between;
 }
 /*  */
-
+header form input[type="search"] {
+  padding: 0.7rem;
+  border: none;
+  outline: none;
+  width: 100%;
+  font-family: "lato";
+  font-weight: bold;
+}
 .title {
   font-family: "Poppins";
   white-space: normal;
@@ -129,11 +147,31 @@ article .formstitle {
   margin-top: 1rem;
   font-family: "Poppins";
 }
+article .formstitle:first-child {
+  margin-top: 0;
+}
+article label input {
+  font-family: "lato";
+  font-weight: bold;
+  padding: 0.5rem;
+  outline: none;
+  border: none;
+  border-bottom: 1px solid rgb(133, 133, 133);
+  background-color: white;
+}
 article .formstitle p:first-child {
   font-weight: bold;
 }
 article .formstitle p:last-child {
   font-size: 0.9rem;
+}
+article .rightcontent form {
+  margin-top: 1rem;
+  display: block;
+  position: relative;
+  padding: 2rem;
+  background-color: #ddd;
+  box-shadow: 10px 10px 1px var(--white-200);
 }
 article button[type="submit"] {
   display: block;
@@ -142,6 +180,24 @@ article button[type="submit"] {
   outline: none;
   color: white;
   border-radius: 2px;
+  margin-top: 4rem;
+  position: absolute;
+  right: 0;
+  transition-duration: 200ms;
+}
+article button[type="submit"]:hover {
+  transform: translate(-2px, -2px);
+  box-shadow: 3px 3px 1px #666;
+}
+article textarea[name="message"] {
+  resize: vertical;
+  font-family: "lato";
+  font-weight: bold;
+  padding: 0.5rem;
+  outline: none;
+  border: none;
+  border-bottom: 1px solid rgb(133, 133, 133);
+  background-color: white;
 }
 footer hr {
   display: block;
@@ -151,7 +207,9 @@ footer hr {
 footer .wrapper {
   padding: 4rem 0.5rem;
   display: flex;
-  align-items: center;
+}
+footer .left {
+  padding-left: 1rem;
 }
 footer .left p {
   margin: 1rem 0;
@@ -182,7 +240,11 @@ footer .wrapperRight input[type="email"] {
   margin: 0.8rem 0;
   display: block;
   width: 100%;
-  padding: 0.4rem;
+  padding: 0.6rem 0.4rem;
+  border: 2px solid black;
+  outline: none;
+  font-family: "lato";
+  font-weight: bold;
 }
 footer h5 {
   font-family: "Poppins";
@@ -199,11 +261,16 @@ footer .sosmed li a {
 footer button[type="submit"] {
   display: block;
   width: 100%;
-  padding: 0.3rem 1.5rem;
+  padding: 0.5rem 1.5rem;
   background-color: rgb(32, 29, 29);
   outline: none;
   color: white;
   border-radius: 2px;
+  transition-duration: 0.2s;
+}
+footer button[type="submit"]:hover {
+  transform: translateY(-2px);
+  box-shadow: 0px 3px 1px #666;
 }
 @media only screen and (max-width: 768px) {
   body > .wrapper .container header,
@@ -240,9 +307,20 @@ footer button[type="submit"] {
     flex-direction: column;
     justify-content: center;
   }
+  footer .wrapperRight .navigationWrapper {
+    padding: 0rem 1.2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-content: flex-end;
+    flex-wrap: wrap;
+  }
   footer .right .wrapperRight {
     width: 100%;
     display: flex;
+  }
+  footer .right {
+    margin-top: 2rem;
   }
   footer .setengah {
     width: 100%;
